# SearchEngine

./: .gitignore  21f_final_proj_template.cbp  CMakeCache.txt  CMakeLists.txt  DSAVLTree.h  DSAVLTreeTests.cpp  DSHashTable.h  DSHashTableTests.cpp  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  Makefile  QueryEngine.cpp  QueryEngine.h  README.md  SearchEngine.cpp  SearchEngine.h  Stats_Persistence.txt  cmake_install.cmake  main.cpp
Doxygen html folder/: _d_s_a_v_l_tree_8h_source.html  _d_s_hash_table_8h_source.html  _document_parser_8h_source.html  _index_handler_8h_source.html  _query_engine_8h_source.html  _search_engine_8h_source.html  annotated.html  catch_8hpp_source.html  catch__setup_8h_source.html  class_catch_1_1_assertion_handler-members.html  class_catch_1_1_assertion_handler.html  class_catch_1_1_binary_expr-members.html  class_catch_1_1_binary_expr.html  class_catch_1_1_capturer-members.html  class_catch_1_1_capturer.html  class_catch_1_1_detail_1_1_approx-members.html  class_catch_1_1_detail_1_1_approx.html  class_catch_1_1_detail_1_1_is_stream_insertable-members.html  class_catch_1_1_detail_1_1_is_stream_insertable.html  class_catch_1_1_exception_translator_registrar-members.html  class_catch_1_1_exception_translator_registrar.html  class_catch_1_1_expr_lhs-members.html  class_catch_1_1_expr_lhs.html  class_catch_1_1_generator_exception-members.html  class_catch_1_1_generator_exception.html  class_catch_1_1_generators_1_1_chunk_generator-members.html  class_catch_1_1_generators_1_1_chunk_generator.html  (+280 more)
(+29 files in other folders)
